[package]
name = "lookon"
version = "0.1.0"
authors = ["Zhishan Zhang <zhangzhishanlo@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"

# serde_json is just for the example, not required in general
serde_json = "1.0"
pinyin = "0.4"

rusqlite = "0.16"
time = "0.1.42"